<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/nav_about_me" />

    <item
        android:id="@+id/nav_education"
        android:icon="@drawable/ic_school_black_24dp"
        android:title="@string/nav_education" />

    <item
        android:id="@+id/nav_projects"
        android:icon="@drawable/ic_folder_black_24dp"
        android:title="@string/nav_projects"/>

    <item
        android:id="@+id/nav_skills"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/nav_skills"/>

    <item
        android:id="@+id/nav_work"
        android:icon="@drawable/ic_business_center_black_24dp"
        android:title="@string/nav_work"/>

</menu>